Fixed bug visibility: visible  was not set in .active for round-over

--- a/scss/_round-over.scss
+++ b/scss/_round-over.scss
@@ -22,14 +22,14 @@
         text-transform: uppercase;
         letter-spacing: 0.1em;
         font-size: 1rem;
-        
+
         &:hover {
             color: red;
         }
     }
 
     &.active {
-        visibility: hidden;
+        visibility: visible;
         display: flex;
     }
 }
